# RT_Practice

./: CMakeLists.txt  README.md
Raytracer_Sandbox/: CMakeLists.txt  sandbox.cpp
Scripts/: build.bat  format.bat
include/RMRT/: RMRT.h  Ray.h  Raytracer.h  Vec3.h
include/RMRT/Bounds/: AABB.h  BVH.h
include/RMRT/Camera/: Camera.h
include/RMRT/Image/: Image.h
include/RMRT/Materials/: Dielectric.h  Lambertian.h  Material.h  Metal.h
include/RMRT/Noise/: Perlin.h
include/RMRT/Objects/: HittableList.h  HittableObject.h  Sphere.h
include/RMRT/Textures/: CheckerTexture.h  ImageTexture.h  MarbleTexture.h  NoiseTexture.h  Texture.h
src/: CMakeLists.txt  RMRT.cpp  Ray.cpp  Raytracer.cpp  Vec3.cpp
src/Bounds/: AABB.cpp  BVH.cpp
src/Camera/: Camera.cpp
src/Image/: Image.cpp
src/Materials/: Dielectric.cpp  Lambertian.cpp  Material.cpp  Metal.cpp
src/Noise/: Perlin.cpp
src/Objects/: HittableList.cpp  Sphere.cpp
src/Textures/: CheckerTexture.cpp  ImageTexture.cpp  Texture.cpp
